tests/ui/traverse_bare_self.stderr
error[E0308]: mismatched types
 --> tests/ui/traverse_bare_self.rs:8:6
  |
7 |   #[pymethods]
  |   ------------ arguments to this function are incorrect
8 |   impl TraverseTriesToTakePyRef {
  |  ______^
9 | |     fn __traverse__(slf: PyRef<Self>, visit: PyVisit) {}
  | |___________________^ expected fn pointer, found fn item
  |
  = note: expected fn pointer `for<'a, 'b> fn(&'a TraverseTriesToTakePyRef, PyVisit<'b>) -> Result<(), PyTraverseError>`
                found fn item `for<'a, 'b> fn(pyo3::PyRef<'a, TraverseTriesToTakePyRef>, PyVisit<'b>) {TraverseTriesToTakePyRef::__traverse__}`
note: function defined here
 --> src/impl_/pymethods.rs
  |
  | pub unsafe fn call_traverse_impl<T>(
  |               ^^^^^^^^^^^^^^^^^^
